# esp32-event-driven-with-rtos

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt
main/app/: app.cpp  app.h  shell.cpp  task_device.cpp  task_device.h  task_list.cpp  task_list.h  task_shell.cpp  task_shell.h
main/common/: cmd_line.c  cmd_line.h
main/esp-os/: eos.c  eos.h  eos_log.h
main/sys/: sys_io.c  sys_io.h  sys_log.h
